force-app/main/default/objects/GMBLASG__Settings__c/GMBLASG__Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>GMBLASG Settings</label>
</CustomObject>