force-app/main/default/objects/GMBLASG__Settings__c/fields/GMBLASG__disable_gtAccountPayable__c.field-meta.xml
<CustomField>
    <fullName>GMBLASG__disable_gtAccountPayable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>disable gtAccountPayable</label>
    <type>Checkbox</type>
</CustomField>