force-app/main/default/objects/GMBLASG__Settings__c/fields/GMBLASG__disable_gtCashDisbursement__c.field-meta.xml
<CustomField>
    <fullName>GMBLASG__disable_gtCashDisbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>disable gtCashDisbursement</label>
    <type>Checkbox</type>
</CustomField>